test/visibility/except/typeExcept.good
typeExcept.chpl:5: In function 'main':
typeExcept.chpl:6: error: 'foo' undeclared (first use this function)
